# Bagcilar-WASM

./: package.json
bagcilar-wasm/: Cargo.toml
bagcilar-wasm/__src/: lib.rs
bagcilar-wasm/__src/display/: Object_2d.rs  mod.rs
bagcilar-wasm/src/: Container.rs  Object2D.rs  Scene.rs  Sprite.rs  lib.rs  object2d.rs  scene.rs  utils.rs
bagcilar-wasm/src/display/: ObjectContainer2D.rs  Object_2d.rs  Square.rs  mod.rs
bagcilar-web/: package.json  webpack.config.js
bagcilar-web/src/: Bagcilar2D.js  index.js
