[package]
name = "bagcilar-wasm"
version = "0.1.0"
authors = ["SelimAbidin <ysabidin@gmail.com>"]
edition = "2018"
description = "Rost WebGL program for testing"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test"
path = "src/Bagcilar2D.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"