[package]
name = "bagcilar-wasm"
version = "0.1.0"
authors = ["SelimAbidin <ysabidin@gmail.com>"]
edition = "2018"
description = "Rost WebGL program for testing"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
cgmath = "0.17.0"

[dependencies.web-sys]
version = "0.3.28"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"